basic layout structure

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,16 @@
-<main class="main">
-  <p-button label="Check" />
-  <i class="pi pi-check"></i>
-  <i class="pi pi-times"></i>
-  <span class="pi pi-search"></span>
-  <span class="pi pi-user"></span>
-</main>
+<section class="container">
+  <header class="header">
+    <app-header></app-header>
+  </header>
+  <section class="main-section">
+    <div class="sidebar">
+      <app-sidebar></app-sidebar>
+    </div>
+    <div class="main">
+      <app-main></app-main>
+    </div>
+  </section>  
+  <footer class="footer">
+    <app-footer></app-footer>
+  </footer>
+</section>
