role based routes and roleGuard added

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,7 +7,7 @@
       <app-sidebar></app-sidebar>
     </div>
     <div class="main">
-      <app-main></app-main>
+        <router-outlet></router-outlet>
     </div>
   </section>  
   <footer class="footer">
