header component changes

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,14 +2,9 @@
   <header class="header">
     <app-header></app-header>
   </header>
-  <section class="main-section">
-    <div class="sidebar">
-      <app-sidebar></app-sidebar>
-    </div>
-    <div class="main">
-        <router-outlet></router-outlet>
-    </div>
-  </section>  
+  <section class="main">
+    <router-outlet></router-outlet>
+  </section>
   <footer class="footer">
     <app-footer></app-footer>
   </footer>
