added app footer

--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -1,1 +1,36 @@
-<p>footer works!</p>
+<footer class="hotel-footer">
+  <div class="footer-container">
+    <div class="footer-section">
+      <h3>StayFinder</h3>
+      <p>Your trusted partner for hotel management & booking.</p>
+    </div>
+    <div class="footer-section">
+      <h4>Quick Links</h4>
+      <ul>
+        <li><a routerLink="/">Home</a></li>
+        <li><a routerLink="/hotels">Hotels</a></li>
+        <li><a routerLink="/about-us">About Us</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-section">
+      <h4>Contact</h4>
+      <p>📍 123 Main Street, Indore, India</p>
+      <p>📞 +91 98765 43210</p>
+      <p>✉️ support@stayfinder.com</p>
+    </div>
+
+    <div class="footer-section">
+      <h4>Social URLs</h4>
+      <div class="social-icons">
+        <a href="https://github.com/amanangular13"><i class="pi pi-github"></i></a>
+        <a href="https://www.linkedin.com/in/aman-verma-b377ab1ba/"><i class="pi pi-linkedin"></i></a>
+        <a href="https://www.instagram.com/icrazy4you"><i class="pi pi-instagram"></i></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>© 2025 StayFinder. All rights reserved.</p>
+  </div>
+</footer>
