--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -4,7 +4,7 @@
       src="https://png.pngtree.com/png-vector/20250909/ourlarge/pngtree-beach-hotel-logo-design-vector-file-png-image_17389889.webp"
       style="width: 4rem; margin-right: 1rem; border-radius: 3rem"
     />
-    <h1 class="">Stay Finder</h1>
+    <h1 class="">StayFinder</h1>
   </ng-template>
 
   <ng-template #center>
@@ -16,7 +16,7 @@
         <p-button label="Explore Hotels" text plain />
       </a>
       <a routerLink="/about-us">
-        <p-button label="About" text plain />
+        <p-button label="About Us" text plain />
       </a>
     </div>
   </ng-template>
