--- a/src/app/layout/header/header.scss
+++ b/src/app/layout/header/header.scss
@@ -1,4 +1,7 @@
 ::ng-deep {
+  .p-component.p-toolbar {
+    background-color: #2c3e50;
+  }
   .p-toolbar-end {
     .p-button-rounded {
       padding: 15px;
