added login and register components

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,5 @@
 <section class="container">
+  <!-- <p-progressbar mode="indeterminate" color="white" [style]="{ height: '1px' }" /> -->
   <header class="header">
     <app-header></app-header>
   </header>
