--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -1,4 +1,4 @@
-<p-toolbar [style]="{ 'border-radius': '3rem', padding: '0rem 1rem 0rem 1rem' }">
+<p-toolbar [style]="{ 'border-radius': '3rem', padding: '0rem 1rem 0rem 1rem', 'margin-top': '5px' }">
   <ng-template #start>
     <img
       src="https://png.pngtree.com/png-vector/20250909/ourlarge/pngtree-beach-hotel-logo-design-vector-file-png-image_17389889.webp"
