--- a/src/app/shared/components/register/register.html
+++ b/src/app/shared/components/register/register.html
@@ -1,1 +1,67 @@
-<p>register works!</p>
+<div class="user-registration">
+  <div class="ml4 mt3 mr4 mb3">
+    <h1>Create new account</h1>
+  </div>
+  <form [formGroup]="registrationForm" (ngSubmit)="submitForm()">
+    <div class="clearfix m2">
+      <label class="col col-2" for="name">Name : </label>
+      <input class="col col-2" id="name" pInputText formControlName="name" />
+    </div>
+
+    <div class="clearfix m2">
+      <label class="col col-2" for="email">Email : </label>
+      <input class="col col-2" id="email" pInputText formControlName="email" />
+    </div>
+
+    <div class="clearfix m2">
+      <label class="col col-2" for="password">Password : </label>
+      <p-password
+        class="col col-2"
+        id="password"
+        formControlName="password"
+        toggleMask
+        feedback="false"
+      ></p-password>
+    </div>
+
+    <div class="clearfix m2">
+      <label class="col col-2" for="confirmPassword">Confirm Password : </label>
+      <p-password
+        class="col col-2"
+        id="confirmPassword"
+        formControlName="confirmPassword"
+        toggleMask
+        feedback="false"
+      ></p-password>
+    </div>
+
+    <div class="clearfix m2">
+      <label class="col col-2" for="phone">Phone : </label>
+      <input class="col col-2" id="phone" pInputText formControlName="phone" />
+    </div>
+
+    <div class="ml2">
+      <p-checkbox formControlName="requestedForHotelManager" binary="true" />
+      <span class="ml2">Please check this, If you are registring for Hotel Manager.</span>
+    </div>
+
+    <div class="mt3 ml2 mb3">
+      <p-button
+        type="submit"
+        severity="primary"
+        label="Register"
+        [disabled]="registrationForm.invalid"
+      ></p-button>
+    </div>
+  </form>
+  @if (registrationForm.get('name')?.touched && registrationForm.get('name')?.invalid) {
+  <div class="p-error">Name is required.</div>
+  } @if (registrationForm.get('email')?.touched && registrationForm.get('email')?.invalid) {
+  <div class="p-error">Enter a valid email.</div>
+  } @if (registrationForm.errors?.["mismatch"] && registrationForm.get('confirmPassword')?.touched)
+  {
+  <div class="p-error">Passwords do not match.</div>
+  } @if (registrationForm.get('phone')?.touched && registrationForm.get('phone')?.invalid) {
+  <div class="p-error">Enter a valid 10-digit phone number.</div>
+  }
+</div>
