--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "primeicons/primeicons.css";
+@import "basscss/css/basscss.min.css";
 
 html, body {
   font-family: 'Exo 2', sans-serif;
