--- a/src/app/shared/components/page-not-found/page-not-found.html
+++ b/src/app/shared/components/page-not-found/page-not-found.html
@@ -1,1 +1,5 @@
-<p>page-not-found works!</p>
+<div class="not-found-container">
+  <h1>404</h1>
+  <p>Oops! Page not found.</p>
+  <a routerLink="/">Go back to Home</a>
+</div>
