--- a/src/app/shared/components/unauthorized/unauthorized.html
+++ b/src/app/shared/components/unauthorized/unauthorized.html
@@ -1,1 +1,5 @@
-<p>unauthorized works!</p>
+<div class="unauthorized">
+  <h2>Unauthorized</h2>
+  <p>You are not authorized to access this page.</p>
+  <a routerLink="/">Go back to Home</a>
+</div>
