--- a/src/app/shared/components/login/login.html
+++ b/src/app/shared/components/login/login.html
@@ -1,6 +1,6 @@
-<div class="user-login">
+<div class="user-login" style="margin-left: 500px; margin-top: 100px;">
   <div class="ml4 mt3 mr4 mb3">
-    <h1>Login</h1>
+    <h1 style="margin-left: 150px;">Login</h1>
   </div>
   <form [formGroup]="loginForm" (ngSubmit)="submitForm()">
     <div class="clearfix m2">
