--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="footer-section">
-      <h4>Social URLs</h4>
+      <h4>Social</h4>
       <div class="social-icons">
         <a href="https://github.com/amanangular13"><i class="pi pi-github"></i></a>
         <a href="https://www.linkedin.com/in/aman-verma-b377ab1ba/"><i class="pi pi-linkedin"></i></a>
