added add-hotel, update-hotel, add-room, update-room and loadingSpinner

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,7 @@
 <section class="container">
-  <!-- <p-progressbar mode="indeterminate" color="white" [style]="{ height: '1px' }" /> -->
+  @if (showSpinner()) {
+    <p-progressbar mode="indeterminate" color="white" [style]="{ height: '1px' }" />
+  }
   <header class="header">
     <app-header></app-header>
   </header>
