--- a/src/app/shared/components/login/login.html
+++ b/src/app/shared/components/login/login.html
@@ -4,12 +4,12 @@
   </div>
   <form [formGroup]="loginForm" (ngSubmit)="submitForm()">
     <div class="clearfix m2">
-      <label class="col col-2" for="email">Email : </label>
+      <label class="col col-2 pt1" for="email">Email : </label>
       <input class="col col-2" id="email" pInputText formControlName="email" />
     </div>
 
     <div class="clearfix m2">
-      <label class="col col-2" for="password">Password : </label>
+      <label class="col col-2 pt1" for="password">Password : </label>
       <p-password
         class="col col-2"
         id="password"
