added hotels page basic layout

--- a/src/app/features/hotels/hotels.html
+++ b/src/app/features/hotels/hotels.html
@@ -1,1 +1,88 @@
-<p>hotels works!</p>
+<div class="hotel-panel">
+  <div class="hotel-image">
+    <img
+      src="https://r1imghtlak.mmtcdn.com/c17a5c9ce02d11ed95310a58a9feac02.jpg?output-quality=75&output-format=webp&downsize=540:*"
+    />
+  </div>
+  <div class="hotel-details">
+    <h2>Valentines Retreat</h2>
+    <p style="height: 100px">
+      Well-appointed hotel near Candolim beach offering city-view rooms, a plush pool, dining area &
+      sit-outs on the lawn.
+    </p>
+    <span class="msg mr1">Couple Friendly</span>
+    <span class="msg">Late night check-in</span>
+    <h2 class="right">Ratings : 4.8</h2>
+  </div>
+  <div class="hotel-price">
+    <h2 class="right"><span class="pi pi-indian-rupee"></span>{{ 2259 }}</h2>
+    <p class="right">+{{ 2250 * 0.05 }} taxes & fees</p>
+    <p class="right">Per Night</p>
+  </div>
+</div>
+<div class="hotel-panel">
+  <div class="hotel-image">
+    <img
+      src="https://r1imghtlak.mmtcdn.com/427efe68-5db9-4db0-91ce-80ed55a026da.jpg?output-quality=75&output-format=jpg&downsize=540:*"
+    />
+  </div>
+  <div class="hotel-details">
+    <h2>Prime hotel</h2>
+    <p style="height: 100px">
+      Experience unparalleled comfort at this lavish property offering well-appointed rooms, an
+      incredible restaurant, a swimming pool and a host of premium amenities.
+    </p>
+    <span class="msg mr1">Couple Friendly</span>
+    <span class="msg">Late night check-in</span>
+    <h2 class="right">Ratings : 4.3</h2>
+  </div>
+  <div class="hotel-price">
+    <h2 class="right"><span class="pi pi-indian-rupee"></span>{{ 6500 }}</h2>
+    <p class="right">+{{ 6500 * 0.05 }} taxes & fees</p>
+    <p class="right">Per Night</p>
+  </div>
+</div>
+<div class="hotel-panel">
+  <div class="hotel-image">
+    <img
+      src="https://r2imghtlak.mmtcdn.com/r2-mmt-htl-image/htl-imgs/200902181022218554-e7f2ecfa-ca48-43d4-863d-61b2617ac1c5.jpg?output-quality=75&output-format=webp&downsize=540:*"
+    />
+  </div>
+  <div class="hotel-details">
+    <h2>Valentines Retreat</h2>
+    <p style="height: 100px">
+      Well-appointed hotel near Candolim beach offering city-view rooms, a plush pool, dining area &
+      sit-outs on the lawn.
+    </p>
+    <span class="msg mr1">Couple Friendly</span>
+    <span class="msg">Late night check-in</span>
+    <h2 class="right">Ratings : 4.8</h2>
+  </div>
+  <div class="hotel-price">
+    <h2 class="right"><span class="pi pi-indian-rupee"></span>{{ 2259 }}</h2>
+    <p class="right">+{{ 2250 * 0.05 }} taxes & fees</p>
+    <p class="right">Per Night</p>
+  </div>
+</div>
+<div class="hotel-panel">
+  <div class="hotel-image">
+    <img
+      src="https://r2imghtlak.mmtcdn.com/r2-mmt-htl-image/htl-imgs/200702091825447406-ccfa59c2693411e6b99b36cfdd80c293.jpg?output-quality=75&output-format=webp&downsize=540:*"
+    />
+  </div>
+  <div class="hotel-details">
+    <h2>Valentines Retreat</h2>
+    <p style="height: 100px">
+      Well-appointed hotel near Candolim beach offering city-view rooms, a plush pool, dining area &
+      sit-outs on the lawn.
+    </p>
+    <span class="msg mr1">Couple Friendly</span>
+    <span class="msg">Late night check-in</span>
+    <h2 class="right">Ratings : 4.8</h2>
+  </div>
+  <div class="hotel-price">
+    <h2 class="right"><span class="pi pi-indian-rupee"></span>{{ 2259 }}</h2>
+    <p class="right">+{{ 2250 * 0.05 }} taxes & fees</p>
+    <p class="right">Per Night</p>
+  </div>
+</div>
