--- a/src/app/shared/components/about-us/about-us.scss
+++ b/src/app/shared/components/about-us/about-us.scss
@@ -2,7 +2,7 @@
   max-width: 1200px;
   margin: 2rem auto;
   padding: 2rem;
-  background: #b4bbc8;
+  background: #e4e4e4;
   border-radius: 8px;
   font-family: 'Segoe UI', sans-serif;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
